[package]
name = "carrotcam"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
apriltag = "0.4.0"
apriltag-image = "0.1.0"
arboard = "3.2.1"
imageproc = { version = "0.23.0" }
rusttype = "0.9.3"
show-image = { version = "0.13.1", features = ["image"] }
[dependencies.nokhwa]
version = "0.10.4"
features = ["input-native"]
